now making actual client calls

--- a/services/logic/.env
+++ b/services/logic/.env
@@ -1,5 +1,5 @@
 # Identity
-SERVICE_ID='io.maana.spacys'
+SERVICE_ID='io.maana.ai.gym'
 PORT=7357
 
 # Peer/remote GraphQL services used
@@ -23,8 +23,7 @@ RABBITMQ_PORT=5672
 CKG_SERVICE_URL='http://localhost:8011/service/maana.python.template/graphql'
 
 # Mock Auth Stuff for CKGClient
-REMOTE_KSVC_AUTH_DOMAIN='xyz.auth0.com'
-REMOTE_KSVC_AUTH_CLIENT_ID='abcdefghijklmnopqrstuvwxyz'
-REMOTE_KSVC_AUTH_CLIENT_SECRET='abcdefghijklmnopqrstuvwxyzabcdefghijklmnopqrstuvwxyz'
-REMOTE_KSVC_AUTH_IDENTIFIER='https://something.auth0.somethingelse/'
-
+MACHINE_TO_MACHINE_APP_AUTH_DOMAIN='maana-sales.auth0.com'
+MACHINE_TO_MACHINE_APP_AUTH_CLIENT_ID='IbAE6zxzXtzw577FXkL19WvAewcxAIur'
+MACHINE_TO_MACHINE_APP_AUTH_CLIENT_SECRET='soYHc03OFIWWG798l1YdqUohcwn-tM9iAsW6AlpG6hGdiA763AzUDdEQelVHMYVM'
+MACHINE_TO_MACHINE_APP_AUTH_IDENTIFIER='https://h4.maana.io/'
